--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <div class="container">
+<div class="container">
+    <h1>Login do Usuário</h1>
 
     <select id="usuarios">
         <option value="0">Selecionar usuário</option>
@@ -16,6 +17,12 @@
         <option value="2">Estoquista</option>
         <option value="3">Adiministrativo</option>
     </select>
+
+    <input type="password" id="inpSenha" placeholder="Senha">
+
+    <button onclick="senha()">Entrar</button>
+
+    <p id="pMensagem" class="msg"></p>
 
 </div>
     
