PROJETO-JAVA-SCRIPT-EVENTS-DOM|Bernardo:  Criação de novas condicionais no java script e tag para acionar o botão na tecla enter. Mudança de título das páginas html e adição de id para o botão.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <input type="password" id="inpSenha" placeholder="Senha">
 
-    <button onclick="senha()">Entrar</button>
+    <button id="btnEntrar" onclick="senha()">Entrar</button>
 
     <p id="pMensagem" class="msg"></p>
 
