PROJETO-JAVA-SCRIPT-EVENTS-DOM|Bernardo: Adição de imagem na página index.html. Estilização das páginas pelo css e adição de títulos de boas vindas em algumas páginas.

--- a/adiministrativo.html
+++ b/adiministrativo.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h1>Bem-vindo a página de administração.</h1>
     
 </body>
 <script src="script.js"></script>
