--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
+
+
 <div class="container">
+    <img src="Imagens/Imagem Estoque.png">
+
     <h1>Login do Usuário</h1>
 
     <select id="usuarios">
