--- a/estoque.html
+++ b/estoque.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    Bem-vindo a página de estoque
     
 </body>
 <script src="script.js"></script>
