--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h1>Bem-vindo a página de vendas</h1>
     
 </body>
 <script src="script.js"></script>
